--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   get_it: ^8.2.0
+  connectivity_plus: ^6.1.5
 
 dev_dependencies:
   flutter_test:
